# hypnos

./: .gitignore  Cargo.toml  go.mod  go.sum  server.go
agent/: Cargo.toml
agent/src/: main.rs
agent/src/libs/: structs.rs  utils.rs
config/: hypnos.toml
docker/: Dockerfile-ipmi-bridge  Dockerfile-server  Dockerfile-ssh-bridge  docker-build.sh  docker-compose.yml
ipmi-bridge/: Cargo.toml
ipmi-bridge/src/: main.rs
ipmi-bridge/src/libs/: structs.rs  utils.rs
lib/: Cargo.toml
lib/src/: lib.rs  structs.rs
libs/: Cargo.toml
libs/src/: structs.rs  utils.rs
scripts/: cross-compile.sh  docker-build-all-dev.sh  docker-build-all-release.sh
server/: Cargo.toml
server/src/: main.rs
server/src/libs/: routes.rs  structs.rs  utils.rs
ssh-bridge/: Cargo.toml
ssh-bridge/src/: main.rs
ssh-bridge/src/libs/: structs.rs  utils.rs
