[package]
name = "hypnos-agent"
version = "0.1.0"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Hypnos lib
hypnos-library = { path = "../libs" }
# Core
system_shutdown = "3.0.0"
clap = { version = "3.2", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
