[package]
name = "hypnos-ipmi-bridge"
version = "1.0.0"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Hypnos lib
hypnos-library = { path = "../libs" }
# Core
clap = { version = "4.0.9", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4"
tokio = { version = "1.18.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
