[package]
name = "hypnos-server"
version = "0.1.0"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Hypnos lib
hypnos-library = { path = "../lib" }
# Logging
log = "0.4.17"
simplelog = "0.12"
# Core
actix-web = "4"
tokio = { version = "1.18.2", features = ["full"] }
wake-on-lan = "0.2.0"



