[package]
name = "hypnos-server"
version = "1.0.0"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]

[dependencies]
# Hypnos lib
hypnos-library = { path = "../libs" }
# Configs
dotenv = "0.15.0"
toml = "0.5"
# Logging
log = "0.4.17"
simplelog = "0.12"
# Core
actix-web = "4"
tokio = { version = "1.18.2", features = ["full"] }
wake-on-lan = "0.2.0"
chrono = "0.4"
time = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = { version = "0.3.7", default-features = false, features = ["std"] }
hex = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
