[package]
name = "hypnos-ssh-bridge"
version = "1.0.0"
edition = "2021"
authors = ["Coombszy <LCCoombs@hotmail.co.uk>"]

[dependencies]
# Hypnos lib
hypnos-library = { path = "../libs" }
# Core
clap = { version = "4.0.7", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4"
tokio = { version = "1.18.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
ssh2 = "0.9.3"
